# wtsagnt

./: .gitignore  CLAUDE.md
docs/: HANDOVER.md
docs/superpowers/plans/: 2026-05-13-wtsagnt-prototype.md  2026-05-17-monday-whatsapp-slice.md
docs/superpowers/specs/: 2026-05-13-wtsagnt-prototype-design.md  2026-05-17-monday-whatsapp-slice-design.md
docs/workflows/: teacher-assistant-voice-whatsapp.mmd
prototype/: .env.example  .gitignore  NOTES-2026-05-17.md  Procfile  README.md  pyproject.toml
prototype/samples/: transcript.txt
prototype/src/: font_embed.py  fonts.py  mcq_formatter.py  pdf_formatter.py  pipeline.py  pptx_formatter.py  prompts.py  reply_parser.py  schemas.py  server.py  settings.py  state.py  storage_adapter.py  theme.py  whatsapp_adapter.py  worksheet_formatter.py
prototype/supabase/: config.toml
prototype/supabase/migrations/: 0001_monday_demo.sql  0002_worksheet_url.sql  0003_mcq_url.sql
prototype/tests/: conftest.py  test_fonts.py  test_mcq_formatter.py  test_pdf_formatter.py  test_pipeline.py  test_pptx_formatter.py  test_reply_parser.py  test_schemas.py  test_server.py  test_settings.py  test_smoke_openai.py  test_smoke_pipeline_e2e.py  test_smoke_pipeline_real_storage.py  test_smoke_supabase.py  test_smoke_twilio.py  test_state.py  test_theme.py  test_twilio_signature.py  test_worksheet_formatter.py
tasks/: plan.md  todo.md
