[project]
name = "wtsagnt-monday"
version = "0.1.0"
description = "wtsagnt Monday WhatsApp slice — text in, multi-agent, files out via signed URL"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "twilio>=9.0",
    "supabase>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "python-pptx>=0.6.23",
    "reportlab>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
